feat: Add the option for logging in and registering

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -12,6 +12,7 @@ set(
   src/character/melee/knight.cpp
   src/users/user.cpp
   src/exceptions/database_exception.cpp
+  src/exceptions/user_exception.cpp
   src/services/user_service.cpp
   src/controllers/user_controller.cpp
   src/database_manager/sqlite_database_manager.cpp
